--- a/doc/src/assets/scenario-sequence-diagram.tex
+++ b/doc/src/assets/scenario-sequence-diagram.tex
@@ -2,18 +2,21 @@
 \usepackage{pgf-umlsd}
 \begin{document}
 \begin{sequencediagram}
+\newinst{scenarioservice}{ScenarioService:DefaultService}
 \newinst{remoteregister}{RemoteRegister:DefaultService}
-\newinst{scenario}{Scenario:DefaultService}
 \newinst{service}{SampleService:CustomService}
-\newinst{luci}{Luci}
+\newinst{luci}{LuciIstance:Luci}
 \newinst{client}{SampleClient:Client}
-\begin{call}{service}{run: "RemoteRegister"}{luci}{result}
-  \begin{call}{luci}{run: "RemoteRegister"}{remoteregister}{result}
+\begin{call}{service}{\scriptsize\texttt{\{run:"RemoteRegister",...\}}}{luci}{\scriptsize\texttt{\{result:\{...\}\}} (a)}
+  \begin{call}{luci}{\scriptsize\texttt{\{run:"RemoteRegister",...\}}}{remoteregister}{\scriptsize\texttt{\{result:\{...\}\}} (a)}
   \end{call}
 \end{call}
-
-\begin{call}{client}{run: "SampleService"}{luci}{result}
-  \begin{call}{luci}{run: "SampleService"}{service}{result}
+\begin{call}{client}{\scriptsize\texttt{\{run:"SampleService",...\}}}{luci}{\scriptsize\texttt{\{result:\{...\}\}} (c)}
+  \begin{call}{luci}{\scriptsize\texttt{\{run:"SampleService",...\}}}{service}{\scriptsize\texttt{\{result:\{...\}\}} (c)}
+    \begin{call}{service}{\scriptsize\texttt{\{run:"ScenarioService",...\}}}{luci}{\scriptsize\texttt{\{result:\{...\}\}} (b)}
+      \begin{call}{luci}{\scriptsize\texttt{\{run:"ScenarioService",...\}}}{scenarioservice}{\scriptsize\texttt{\{result:\{...\}\}} (b)}
+      \end{call}
+    \end{call}
   \end{call}
 \end{call}
 \end{sequencediagram}
